# ordine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: demo.tape
docs/: README.md  ai-features.md  chaining.md  cli.md  editor.md  install.md  lab.md  ledger.md  llm.md  naming-checklist.md  playbook-reference.md  playbook.schema.json  plugin-guide.md  release-checklist.md  runner.md  security.md  steps-image.md  triggers.md  web.md  workdir-layout.md
examples/chain/: README.md  assets.csv  gen-images.yml  png-cleanup.yml
examples/docs-pipeline/: README.md  manifest.csv  pipeline.yml
examples/docs-pipeline/samples/: doc_0001.md  doc_0002.md  doc_0003.md
packaging/: conveyor.service  ordine.service
scripts/: build_deb.sh  bump_version.py  check_core_coverage.py  extract_changelog.py
src/conveyor/: __init__.py
src/conveyor/cli/: example_scaffold.py  main.py  output.py
src/conveyor/core/: config.py  db.py  dryrun.py  engines.py  errors.py  ledger.py  manifest.py  models.py  naming.py  playbook.py  registry.py  retention.py  runner.py  triggers.py  workdir.py
src/conveyor/executors/builtin/: file_steps.py  steps.py
src/conveyor/executors/headless/: backends.py  steps.py
src/conveyor/llm/: __init__.py  client.py  errors.py  keys.py  logging.py  prompts.py  steps.py
src/conveyor/llm/adapters/: __init__.py  anthropic.py  openai.py
src/conveyor/llm/features/: __init__.py  branches.py  context.py  diagnosis.py  drafting.py
src/conveyor/web/: app.py  diffing.py  forms.py  security.py  services.py  views.py
src/conveyor/web/routes/: __init__.py  dashboard.py  editor.py  flags.py  lab.py  settings.py  tasks.py
src/conveyor/web/static/: style.css
src/conveyor/web/templates/: base.html  dashboard.html  diff.html  editor.html  flags.html  lab_session.html  lab_setup.html  settings.html  task_detail.html  versions.html
src/conveyor/web/templates/partials/: ai_diagnosis_card.html  ai_draft_form.html  branch_row.html  branch_step_row.html  branch_steps.html  editor_steps.html  lab_step.html  on_failure_block.html  onfail_branches.html  pipeline_cards_inner.html  step_row.html  version_label.html
src/ordine/: __init__.py
src/ordine/cli/: example_scaffold.py  main.py
src/ordine/core/: config.py  db.py  dryrun.py  engines.py  errors.py  ledger.py  manifest.py  models.py  naming.py  playbook.py  registry.py  retention.py  runner.py  steps.py  triggers.py  workdir.py
src/ordine/executors/builtin/: file_steps.py  shell.py  steps.py
src/ordine/executors/headless/: backends.py  steps.py
src/ordine/llm/: __init__.py  client.py  errors.py  keys.py  logging.py  prompts.py  steps.py  types.py
src/ordine/llm/adapters/: __init__.py  anthropic.py  openai.py
src/ordine/llm/features/: __init__.py  branches.py  context.py  diagnosis.py  drafting.py
src/ordine/web/: app.py  diffing.py  flag_hints.py  forms.py  security.py  services.py  views.py
src/ordine/web/routes/: __init__.py  dashboard.py  editor.py  flags.py  lab.py  settings.py  tasks.py
src/ordine/web/static/: htmx.version  style.css
src/ordine/web/templates/: base.html  dashboard.html  editor.html  flags.html  pipeline_tasks.html  settings.html  task_detail.html
src/ordine/web/templates/partials/: ai_branch_approval.html  ai_draft_result.html  branch_row.html  lab_artifacts.html  pipeline_cards.html  pipeline_cards_inner.html
tests/: test_branch_regression.py  test_chain_e2e.py  test_cli.py  test_cli_output.py  test_config.py  test_diff_view.py  test_docs_pipeline_e2e.py  test_dryrun.py  test_dump.py  test_editor_web.py  test_engines.py  test_example_cmd.py  test_file_steps.py  test_forms.py  test_generate_image.py  test_image_steps.py  test_lab_web.py  test_ledger.py  test_ledger_crash.py  test_llm_adapters.py  test_llm_features.py  test_llm_features_e2e.py  test_llm_keys_logging.py  test_manifest.py  test_manifest_trigger.py  test_naming.py  test_no_llm_in_core.py  test_placeholder.py  test_playbook.py  test_registry.py  test_retention.py  test_runner.py  test_runner_e2e.py  test_service_manager.py  test_shell_run.py  test_steps.py  test_triggers.py  test_version_sync.py  test_web.py  test_workdir.py
tests/fixtures/conveyor_test_plugin/: pyproject.toml
tests/fixtures/conveyor_test_plugin/src/conveyor_test_plugin/: __init__.py
tests/fixtures/llm/: branch_suggestion.json.txt  diagnosis_ok.json.txt  fenced_draft.yaml.txt  fixed_draft.yaml.txt  flagship_draft.yaml.txt  invalid_draft.yaml.txt  ordinal_draft_with_regex.yaml.txt
tests/fixtures/ordine_test_plugin/: pyproject.toml
tests/fixtures/ordine_test_plugin/src/ordine_test_plugin/: __init__.py
tests/fixtures/playbooks/invalid/: i01_syntax.yml  i02_unknown_trigger.yml  i03_bad_step_id.yml  i04_dup_branch_names.yml  i05_nested_branch.yml  i06_negative_retries.yml  i07_no_steps.yml  i08_extra_key.yml  i09_wrong_version.yml  i10_ordinal_conflict.yml  i11_bad_ordinal_regex.yml  i12_cross_step_branch_dup.yml
tests/fixtures/playbooks/valid/: v01_minimal.yml  v02_flagship.yml  v03_step_on_failure.yml  v04_pipeline_branches.yml  v05_manifest_trigger.yml  v06_gimp_engine.yml  v07_meta.yml  v08_ordinal_regex.yml
