[project]
name = "conveyor-automation"
version = "0.1.0"
description = "Local-first, AI-assisted task automation pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "Pillow>=10",  # headless image steps: validate, transform, export fallback backend
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conveyor"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["conveyor"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "conveyor.core.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=conveyor --cov-report=term-missing"

[tool.coverage.run]
source = ["src/conveyor"]

[project.entry-points."conveyor.steps"]
util_noop = "conveyor.executors.builtin.steps:NoopStep"
util_fail = "conveyor.executors.builtin.steps:FailStep"
util_copy = "conveyor.executors.builtin.steps:CopyStep"
image_validate = "conveyor.executors.headless.steps:ValidateStep"
image_white_to_alpha = "conveyor.executors.headless.steps:WhiteToAlphaStep"
image_trim = "conveyor.executors.headless.steps:TrimStep"
image_export = "conveyor.executors.headless.steps:ExportStep"

[project.entry-points."conveyor.engines"]
headless = "conveyor.core.engines:HeadlessEngine"
