[project]
name = "conveyor-automation"
version = "0.1.0"
description = "Local-first, AI-assisted task automation pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "Pillow>=10",  # headless image steps: validate, transform, export fallback backend
  "watchdog>=4",  # folder_watch trigger: filesystem events + settle detection
  "typer>=0.12",
  "fastapi>=0.115",  # web UI HTTP layer
  "uvicorn>=0.30",  # ASGI server for conveyor serve
  "jinja2>=3.1",  # HTML templates
  "python-multipart>=0.0.9",  # HTML form parsing
  "tomli-w>=1.0",  # atomic settings write-back
]

[project.optional-dependencies]
dev = [
  "ruff~=0.15.21",
  "mypy~=2.2.0",
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=3.8",
  "httpx>=0.27",  # Starlette TestClient for web tests
]

[project.scripts]
conveyor = "conveyor.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conveyor"]

[tool.hatch.build.targets.wheel.force-include]
"src/conveyor/web/static" = "conveyor/web/static"
"src/conveyor/web/templates" = "conveyor/web/templates"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["conveyor"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
enable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "conveyor.core.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=conveyor --cov-report=term-missing"
markers = ["integration: long-running trigger integration tests (default run)"]

[tool.coverage.run]
source = ["src/conveyor"]

[project.entry-points."conveyor.steps"]
util_noop = "conveyor.executors.builtin.steps:NoopStep"
util_fail = "conveyor.executors.builtin.steps:FailStep"
util_copy = "conveyor.executors.builtin.steps:CopyStep"
file_rename_from_manifest = "conveyor.executors.builtin.file_steps:RenameFromManifestStep"
file_move = "conveyor.executors.builtin.file_steps:MoveStep"
image_validate = "conveyor.executors.headless.steps:ValidateStep"
image_white_to_alpha = "conveyor.executors.headless.steps:WhiteToAlphaStep"
image_trim = "conveyor.executors.headless.steps:TrimStep"
image_export = "conveyor.executors.headless.steps:ExportStep"

[project.entry-points."conveyor.engines"]
headless = "conveyor.core.engines:HeadlessEngine"
