[project]
name = "ordine"
version = "0.1.0"
description = "Ordine — self-healing task pipelines for your desktop."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Constantin Vlad" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "Pillow>=10",  # headless image steps: validate, transform, export fallback backend
  "watchdog>=4",  # folder_watch trigger: filesystem events + settle detection
  "typer>=0.12",
  "fastapi>=0.115",  # web UI HTTP layer
  "uvicorn>=0.30",  # ASGI server for ordine serve
  "jinja2>=3.1",  # HTML templates
  "python-multipart>=0.0.9",  # HTML form parsing
  "tomli-w>=1.0",  # atomic settings write-back
  "httpx>=0.27",  # raw REST LLM adapters (symmetric, mockable; no provider SDKs)
  "keyring>=25",  # secure API key storage with env/.env fallback
]

[project.optional-dependencies]
dev = [
  "ruff~=0.15.21",
  "mypy~=2.2.0",
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=3.8",
]

[project.scripts]
ordine = "ordine.cli.main:main"

[project.urls]
Homepage = "https://github.com/Antikatoptis-Pareidolia/ordine"
Repository = "https://github.com/Antikatoptis-Pareidolia/ordine"
Issues = "https://github.com/Antikatoptis-Pareidolia/ordine/issues"
Changelog = "https://github.com/Antikatoptis-Pareidolia/ordine/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ordine"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/Plans",
  "/demo",
  "/tests",
  "/uv.lock",
  "/scripts/bump_version.py",
  "**/.env*",
  "/.venv*",
  "/build",
  "/dist",
  "/.pytest_cache",
  "/.mypy_cache",
  "/.ruff_cache",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["ordine"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
enable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "ordine.core.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=ordine --cov-report=term-missing"
markers = [
    "integration: long-running trigger integration tests (default run)",
    "llm_live: real LLM calls requiring API keys (excluded from default CI)",
]

[tool.coverage.run]
source = ["src/ordine"]

[project.entry-points."ordine.steps"]
util_noop = "ordine.executors.builtin.steps:NoopStep"
util_fail = "ordine.executors.builtin.steps:FailStep"
util_copy = "ordine.executors.builtin.steps:CopyStep"
file_rename_from_manifest = "ordine.executors.builtin.file_steps:RenameFromManifestStep"
file_move = "ordine.executors.builtin.file_steps:MoveStep"
image_validate = "ordine.executors.headless.steps:ValidateStep"
image_white_to_alpha = "ordine.executors.headless.steps:WhiteToAlphaStep"
image_trim = "ordine.executors.headless.steps:TrimStep"
image_export = "ordine.executors.headless.steps:ExportStep"
llm_generate_image = "ordine.llm.steps:GenerateImageStep"

[project.entry-points."ordine.engines"]
headless = "ordine.core.engines:HeadlessEngine"
