[project]
name = "conveyor-test-plugin"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conveyor_test_plugin"]

[project.entry-points."conveyor.steps"]
test_echo = "conveyor_test_plugin:EchoStep"
