[project]
name = "ordine-test-plugin"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ordine_test_plugin"]

[project.entry-points."ordine.steps"]
test_echo = "ordine_test_plugin:EchoStep"
